<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ManagerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B7DEE8"
            android:gravity="center_vertical"
            android:text="@string/txt_manager_title"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/txt_ip_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/txt_ip_set"
            android:layout_marginStart="20dp"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/txt_ip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/txt_ip"
            android:inputType="number"
            android:digits="0123456789."
            android:textColor="#000000"
            android:layout_marginStart="20dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/txt_port_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/txt_port_set"
            android:layout_marginStart="20dp"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/txt_port"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/txt_port"
            android:inputType="number"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/txt_reader_test"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/txt_reader_test"
            android:layout_marginStart="20dp"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            android:orientation="vertical"
            android:weightSum="1">
            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/btn_reset" />
            <Button
                android:id="@+id/btn_insert_card"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/btn_insert_card" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:orientation="vertical"
            android:weightSum="1">
            <Button
                android:id="@+id/btn_ic_set"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/btn_ic_set" />
            <Button
                android:id="@+id/btn_delete_card"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/btn_delete_card" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:orientation="vertical"
            android:weightSum="1">
            <Button
                android:id="@+id/btn_ms_set"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/btn_ms_set" />
            <Button
                android:id="@+id/btn_status_check"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/btn_status_check" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/txt_sign_pad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/txt_sign_pad"
            android:textSize="15sp" />
        <Button
            android:id="@+id/btn_request_sign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            android:text="@string/btn_request_sign" />
        <Button
            android:id="@+id/btn_request_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:text="@string/btn_request_key" />
        <Button
            android:id="@+id/btn_request_passwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:text="@string/btn_request_passwd" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:weightSum="1">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.6" />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:layout_margin="5dp"
            android:text="@string/btn_save" />
    </LinearLayout>

</LinearLayout>