<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="320dp"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txt_ip_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:text="@string/txt_ip_set"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/txt_ip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.8"
            android:digits="0123456789."
            android:gravity="center_vertical"
            android:inputType="number"
            android:text="@string/txt_ip"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/txt_port_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:text="@string/txt_port_set"
            android:layout_marginTop="10dp"
            android:textSize="13sp" />
        <EditText
            android:id="@+id/txt_port"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:text="@string/txt_port"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:textSize="13sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/txt_reader_test"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:text="@string/txt_reader_test"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_f_reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/buttonround"
            android:text="@string/btn_reset"
            android:textColor="#000000"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_f_ic_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/buttonround"
            android:text="@string/btn_ic_set"
            android:textColor="#000000"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_f_ms_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/buttonround"
            android:text="@string/btn_ms_set"
            android:textColor="#000000"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_f_status_check"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/buttonround"
            android:text="@string/btn_status_check"
            android:textColor="#000000"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/txt_sign_pad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:text="@string/txt_sign_pad"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_f_request_sign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/buttonround"
            android:text="@string/btn_request_sign"
            android:textColor="#000000"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_f_request_consumer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/buttonround"
            android:text="@string/btn_request_consumer"
            android:textColor="#000000"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_f_request_passwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/buttonround"
            android:text="@string/btn_request_passwd"
            android:textColor="#000000"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_f_request_qr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/buttonround"
            android:text="@string/btn_request_qr"
            android:textColor="#000000"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/txt_manager"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_f_manager_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/buttonround"
            android:text="@string/btn_save"
            android:textColor="#000000"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>
