<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OtherActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">
        <TableRow>
            <TextView
                android:id="@+id/txt_other_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_other_set"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/txt_use_fallback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_use_fallback"
                android:textSize="15sp" />
            <Spinner
                android:id="@+id/spinner_use_fallback"
                android:entries="@array/spinner_use_fallback"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txt_bmp_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bmp_sign"
                android:textSize="15sp" />
            <Spinner
                android:id="@+id/spinner_use_bmpsign"
                android:entries="@array/spinner_use_bmpsign"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <Button
                android:id="@+id/btn_folder_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_folder_set" />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />
    </TableLayout>
</LinearLayout>